@@ -1,6 +1,8 @@
 Revision history for Linux-Statm-Tiny
 
 {{$NEXT}}
+  [Enhancements]
+  - Added mb/kb/etc aliases to vsz and rss methods.
 
 0.0400    2015-03-27 13:53:03+00:00 Europe/London
   [Documentation]
